[gd_scene load_steps=3 format=3 uid="uid://pb1ycq7ng6xr"]

[ext_resource type="Script" path="res://script/backgroundSetter.gd" id="1_6igmk"]

[sub_resource type="LabelSettings" id="LabelSettings_wjrr2"]
font_size = 25

[node name="BackgroundSetter" type="PanelContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 115.0
grow_horizontal = 2
size_flags_horizontal = 3
script = ExtResource("1_6igmk")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "背景设置"
label_settings = SubResource("LabelSettings_wjrr2")

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
item_count = 1
selected = 0
allow_reselect = true
popup/item_0/text = "无背景"
popup/item_0/id = 0

[node name="DeleteButton" type="Button" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "删除"

[connection signal="item_selected" from="MarginContainer/VBoxContainer/OptionButton" to="." method="set_data"]
[connection signal="pressed" from="MarginContainer/DeleteButton" to="." method="self_destory"]
